se creo el filtro para las imagenes cargen lento lazy load

--- a/src/app/componets/about/about.component.html
+++ b/src/app/componets/about/about.component.html
@@ -60,7 +60,7 @@
                 <input type="radio" name="slide" id="c1" checked>
                 <label for="c1" class="card">
                     <div class="row">
-                        <div class="icon"> <img src="../../assets/img/iconmontaña.png" alt=""></div>
+                        <div class="icon"> <img src="../../assets/img/iconmontaña.png" loading="lazy" alt=""></div>
 
                         <div class="description c1">
                             <h3>Montañismo</h3>
@@ -71,7 +71,7 @@
                 <input type="radio" name="slide" id="c2">
                 <label for="c2" class="card">
                     <div class="row">
-                        <div class="icon"> <img src="../../assets/img/iconspace.png" alt=""></div>
+                        <div class="icon"> <img src="../../assets/img/iconspace.png"  loading="lazy" alt=""></div>
 
                         <div class="description c2">
                             <h3>Espacio</h3>
@@ -81,7 +81,7 @@
                 <input type="radio" name="slide" id="c3">
                 <label for="c3" class="card">
                     <div class="row">
-                        <div class="icon"> <img src="../../assets/img/iconmusic.jpeg" alt=""></div>
+                        <div class="icon"> <img src="../../assets/img/iconmusic.jpeg"  loading="lazy" alt=""></div>
 
                         <div class="description c3">
                             <h3>Musica</h3>
@@ -91,7 +91,7 @@
                 <input type="radio" name="slide" id="c4">
                 <label for="c4" class="card">
                     <div class="row">
-                        <div class="icon"> <img src="../../assets/img/icontecnologia.png" alt=""></div>
+                        <div class="icon"> <img src="../../assets/img/icontecnologia.png" loading="lazy" alt=""></div>
 
                         <div class="description c4">
                             <h3>Tecnologia</h3>
