--- a/src/app/componets/header/header.component.html
+++ b/src/app/componets/header/header.component.html
@@ -42,7 +42,7 @@
         </div>
       </div>
       <div class="nav_btns_stars">
-        <div class="star" id="nav_star">
+        <div class="star" id="nav_star"   (click)="showsuccess()">
           <i class='bx bxs-star  change-theme'></i>
         </div>
         <div class="puntos">
