--- a/src/app/componets/proyect/proyect.component.html
+++ b/src/app/componets/proyect/proyect.component.html
@@ -1,53 +1,52 @@
 <div class="proyect">
-    <!-- <div class="grid-container">
-        <div class="card a1"></div>
-        <div class="card a2"></div>
-        <div class="card a3"></div>
-        <div class="card a4"></div>
-        <div class="card a5"></div>
-        <div class="card a6"></div>
-        <div class="card a7"></div>
-        <div class="card a8"></div>
-        <div class="card a9"></div>
-      </div> -->
 
-      <section class="section">
-        <div class="title">
-            <div class="text-animate2">
-                <h2>Mis Proyectos</h2>
-            </div>
-            <div class="line"></div>
-        </div>
-            <div class="card__container">
-               <article class="card__article card a1">
-   
-                  <div class="card__data">
-                     <span class="card__description">Vancouver Mountains, Canada</span>
-                     <h2 class="card__title">The Great Path</h2>
-                     <a href="#" class="card__button">Read More</a>
-                  </div>
-               </article>
-               <article class="card__article card a2">
-   
-                  <div class="card__data">
-                     <span class="card__description">Vancouver Mountains, Canada</span>
-                     <h2 class="card__title">The Great Path</h2>
-                     <a href="#" class="card__button">Read More</a>
-                  </div>
-               </article>
-              
-<!--    
-               <article class="card__article">
-                  <img src="assets/img/landscape-3.png" alt="image" class="card__img">
-   
-                  <div class="card__data">
-                     <span class="card__description">Bojcin Forest, Serbia</span>
-                     <h2 class="card__title">Path Of Peace</h2>
-                     <a href="#" class="card__button">Read More</a>
-                  </div>
-               </article>  -->
+
+   <section class="section">
+      <div class="title">
+         <div class="text-animate2">
+            <h2>Mis Proyectos</h2>
          </div>
-      </section>
-      
-      
+         <div class="line"></div>
+      </div>
+      <div class="card__container">
+         <article class="card__article card a1">
+            <img src="../../../assets/img/calcuapp.png" alt="image" loading="lazy" class="card__img">
+            <div class="card__data">
+               <span class="card__description">Es una calculadora para discapacitados visuales y auditivos</span>
+               <h2 class="card__title">CalculAdapta</h2>
+               <a href="#" class="card__button">Leer mas</a>
+            </div>
+         </article>
+         <article class="card__article card a2">
+            <img src="../../../assets/img/auth.png" alt="image" loading="lazy"  class="card__img">
+
+            <div class="card__data">
+               <span class="card__description">Vancouver Mountains, Canada</span>
+               <h2 class="card__title">The Great Path</h2>
+               <a href="#" class="card__button">Read More</a>
+            </div>
+         </article>
+
+         <article class="card__article  card a3">
+            <img src="../../../assets/img/chatbot.png" alt="image" loading="lazy" class="card__img">
+
+            <div class="card__data">
+               <span class="card__description">Bojcin Forest, Serbia</span>
+               <h2 class="card__title">Path Of Peace</h2>
+               <a href="#" class="card__button">Read More</a>
+            </div>
+         </article>
+         <article class="card__article  card a4"   (click)="showsuccess()">
+            <!-- <img src="../../../assets/img/auth.png" alt="image" loading="lazy" class="card__img">
+
+            <div class="card__data">
+               <span class="card__description">Bojcin Forest, Serbia</span>
+               <h2 class="card__title">Path Of Peace</h2>
+               <a href="#" class="card__button">Read More</a>
+            </div> -->
+         </article>
+      </div> 
+   </section>
+
+
 </div>
