--- a/src/app/componets/resume/resume.component.html
+++ b/src/app/componets/resume/resume.component.html
@@ -20,7 +20,7 @@
                             <h4>Ingenieria de Sistemas</h4>
                             <p>UNAD </p>
                             <p>Colombia
-                                <img class="img-1" src="https://cdn-icons-png.flaticon.com/512/330/330508.png" alt="">
+                                <img class="img-1" src="https://cdn-icons-png.flaticon.com/512/330/330508.png" loading="lazy" alt="">
                             </p>
                         </div>
                     </div>
@@ -34,7 +34,7 @@
                             <h4>Auxiliar Qa Analyst </h4>
                             <p>Empresa - Lineru-Tangelo </p>
                             <p>Colombia
-                                <img class="img-1" src="https://cdn-icons-png.flaticon.com/512/330/330508.png" alt="">
+                                <img class="img-1" src="https://cdn-icons-png.flaticon.com/512/330/330508.png" loading="lazy" alt="">
                             </p>
                         </div>
                     </div>
@@ -47,7 +47,7 @@
                             <h4>Bachillerato </h4>
                             <p>Colegio - Jorge Eliecer Gaitan </p>
                             <p>Colombia
-                                <img class="img-1" src="https://cdn-icons-png.flaticon.com/512/330/330508.png" alt="">
+                                <img class="img-1" src="https://cdn-icons-png.flaticon.com/512/330/330508.png" loading="lazy" alt="">
                             </p>
                         </div>
                     </div>
@@ -67,7 +67,7 @@
                             <h4>Auxiliar Frontend </h4>
                             <p>Empresa - Lineru-Tangelo </p>
                             <p>Colombia
-                                <img class="img-1" src="https://cdn-icons-png.flaticon.com/512/330/330508.png" alt="">
+                                <img class="img-1" src="https://cdn-icons-png.flaticon.com/512/330/330508.png" loading="lazy" alt="">
                             </p>
                         </div>
                     </div>
@@ -80,7 +80,7 @@
                             <h4>Analisis y Desarrollo De Sistemas De Informacion </h4>
                             <p>Sena - Tecnologo </p>
                             <p>Colombia
-                                <img class="img-1" src="https://cdn-icons-png.flaticon.com/512/330/330508.png" alt="">
+                                <img class="img-1" src="https://cdn-icons-png.flaticon.com/512/330/330508.png" loading="lazy" alt="">
                             </p>
                         </div>
                     </div>
@@ -98,7 +98,7 @@
                 <div class="box_contain">
                     <div #wrapper1 class="wrapper">
                         <div #ticket1 class="ticket d1">
-                            <img class="imagen" src="../../assets/img/angular.png" alt="">
+                            <img class="imagen" src="../../assets/img/angular.png" loading="lazy" alt="">
                             <div class="bg1"></div>
                             <div class="bg2"> </div>
                             <h1>Angular</h1>
@@ -108,7 +108,7 @@
                     </div>
                     <div #wrapper2 class="wrapper">
                         <div #ticket2 class="ticket d2">
-                            <img class="imagen" src="../../assets/img/mysql.png" alt="">
+                            <img class="imagen" src="../../assets/img/mysql.png" loading="lazy" alt="">
                             <div class="bg1"></div>
                             <div class="bg2"></div>
                             <h1>Mysq</h1>
@@ -117,7 +117,7 @@
                     </div>
                     <div #wrapper3 class="wrapper">
                         <div #ticket3 class="ticket d3">
-                            <img class="imagen" src="../../assets/img/node.png" alt="">
+                            <img class="imagen" src="../../assets/img/node.png" loading="lazy" alt="">
                             <div class="bg1"></div>
                             <div class="bg2"></div>
                             <h1>Node js</h1>
@@ -126,7 +126,7 @@
                     </div>
                     <div #wrapper4 class="wrapper">
                         <div #ticket4 class="ticket d4">
-                            <img class="imagen" src="../../assets/img/js.png" alt="">
+                            <img class="imagen" src="../../assets/img/js.png" loading="lazy" alt="">
                             <div class="bg1"></div>
                             <div class="bg2"> </div>
                             <h1>Java Script</h1>
@@ -136,7 +136,7 @@
                     </div>
                     <div #wrapper5 class="wrapper">
                         <div #ticket5 class="ticket d5">
-                            <img class="imagen" src="../../assets/img/html.png" alt="">
+                            <img class="imagen" src="../../assets/img/html.png" loading="lazy" alt="">
                             <div class="bg1"></div>
                             <div class="bg2"></div>
                             <h1>Html</h1>
@@ -145,7 +145,7 @@
                     </div>
                     <div #wrapper6 class="wrapper">
                         <div #ticket6 class="ticket d6">
-                            <img class="imagen" src="../../assets/img/css.png" alt="">
+                            <img class="imagen" src="../../assets/img/css.png" loading="lazy" alt="">
                             <div class="bg1"></div>
                             <div class="bg2"></div>
                             <h1>Css</h1>
@@ -155,7 +155,7 @@
                     
                     <div #wrapper7 class="wrapper">
                         <div #ticket7 class="ticket d7">
-                            <img class="imagen" src="../../assets/img/iconpostman.png" alt="">
+                            <img class="imagen" src="../../assets/img/iconpostman.png" loading="lazy" alt="">
                             <div class="bg1"></div>
                             <div class="bg2"></div>
                             <h1>Type Script</h1>
@@ -164,7 +164,7 @@
                     </div>
                     <div #wrapper8 class="wrapper">
                         <div #ticket8 class="ticket d8">
-                            <img class="imagen" src="../../assets/img/iconts.png" alt="">
+                            <img class="imagen" src="../../assets/img/iconts.png" loading="lazy" alt="">
                             <div class="bg1"></div>
                             <div class="bg2"></div>
                             <h1>Type Script</h1>
@@ -185,7 +185,7 @@
                 <!-- Tarjeta 1 -->
                 <div class="cards1">
                     <div class="card1_border">
-                        <img src="../../assets/img/leo2.jpg" alt="card image" class="card1_img">
+                        <img src="../../assets/img/leo2.jpg" alt="card image" loading="lazy" class="card1_img">
                     </div>
                     <div class="card1" #card1 style="--clr: #0f0;"></div>
                     <h3 class="card1_name">Harbey Paez</h3>
@@ -214,7 +214,7 @@
                 <!-- Tarjeta 2-->
                 <div class="cards1">
                     <div class="card1_border">
-                        <img src="../../assets/img/leo2.jpg" alt="card image" class="card1_img">
+                        <img src="../../assets/img/leo2.jpg" alt="card image" loading="lazy" class="card1_img">
                     </div>
                     <div class="card1" #card1 style="--clr: #ff0055;"></div>
                     <h3 class="card1_name">Johana Milena Martinez</h3>
@@ -243,7 +243,7 @@
                 <!-- Tarjeta 3-->
                 <div class="cards1">
                     <div class="card1_border">
-                        <img src="../../assets/img/leo2.jpg" alt="card image" class="card1_img">
+                        <img src="../../assets/img/leo2.jpg" alt="card image" loading="lazy" class="card1_img">
                     </div>
                     <div class="card1" #card1 style="--clr: #1e00ff;"></div>
                     <h3 class="card1_name">Julieth Cuervo</h3>
