--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
+
 * {
     margin: 0;
     padding: 0;
@@ -11,24 +12,35 @@
 
 
 body {
-    min-height: 100vh;
-    /* Asegura que el body ocupe al menos toda la altura de la ventana */
-    background: url(./assets/img/fondo.jpg);
-    background-size: cover;
+    margin: 0;
+    padding: 0;
+    font-family: "Ubuntu", sans-serif;
 }
 
-body::before {
-    content: '';
+.background-image {
     position: fixed;
-    /* Usa fixed para que el overlay cubra toda la pantalla */
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    z-index: -1;
+}
+
+.background-image img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.overlay {
+    position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
     background: rgba(0, 0, 0, 0.86);
-    /* Ajusta el valor de opacidad según sea necesario */
     z-index: -1;
-    /* Asegura que el pseudo-elemento esté detrás del contenido */
 }
 
 
