--- a/src/app/componets/perfil/perfil.component.css
+++ b/src/app/componets/perfil/perfil.component.css
@@ -183,3 +183,25 @@ h1 {
     color: #fff;
     text-decoration: none;
 }
+
+/* Teléfonos en orientación vertical y horizontal */
+@media (max-width: 400px) {
+    .container {
+        background: hsl(204deg 100% 3% / 80%);
+        margin: 10px;
+        position: relative;
+        z-index: 1;
+        top: 0;
+        left: 10px;
+        display: flex;
+        width: 20rem;
+        height: 96vh;
+        border-radius: 15px;
+        flex-direction: column;
+        align-items: center;
+        box-shadow: inset 0px 0px 6px 2px var(--border-shadow-interior);
+    
+    
+    }
+    
+  }
