--- a/src/app/componets/body/body.component.css
+++ b/src/app/componets/body/body.component.css
@@ -78,3 +78,21 @@
     font-weight: 800;
 
 }
+/* Teléfonos en orientación vertical y horizontal */
+@media (max-width: 400px) {
+    .body {
+        width: 95%;
+        min-height: 96vh;
+        margin: 10px;
+        z-index: 1000;
+        position: relative;
+        top: 0;
+    
+    }
+    .sidenav {
+       
+        display: none;
+    
+    }
+    
+  }
