se camibo en el header  y se blouqeo el div.pointerstar

--- a/src/app/componets/header/header.component.css
+++ b/src/app/componets/header/header.component.css
@@ -375,4 +375,15 @@ h2 {
 
     
     }
+    .titulo {
+        display: flex;
+        gap: 175px;
+        left: -10px;
+        top: -10px;
+      position: relative;
+    }
+    .pointerstar {
+        
+        display: none;
+    }
   }
