listo el perfil en meidaquiere 400px ya quedo

--- a/src/app/componets/perfil/perfil.component.css
+++ b/src/app/componets/perfil/perfil.component.css
@@ -72,9 +72,7 @@ h1 {
 
 .perfil .text-animate2 {
 
-    width: 14rem;
     position: relative;
-    display: flex;
     display: flex;
     justify-content: center;
 }
@@ -189,14 +187,36 @@ h1 {
     .container {
         margin: 10px;
         position: relative;
-        top: 0;
+        top: 110px;
         left: 0;
         display: flex;
         width: 95%;
-        height: 96vh;
-      
-    
-    
+        height: 82vh;
+
     }
-    
-  }
+
+    h1 {
+        margin-top: 25px;
+        font-size: 26px;
+
+    }
+
+    .imagen img {
+        width: 270px;
+        height: 330px;
+        transform: rotate(357deg) translateY(-20px);
+
+    }
+
+    .imagen {
+        margin-top: 15px;
+        margin-bottom: 15px;
+
+    }
+
+    .buttons {
+        padding: 18px;
+        margin: 25px 0 15px 0;
+        
+    }
+}
