--- a/src/app/componets/body/body.component.css
+++ b/src/app/componets/body/body.component.css
@@ -84,9 +84,10 @@
         width: 95%;
         min-height: 96vh;
         margin: 10px;
+        margin-bottom: 15px;
         z-index: 1000;
         position: relative;
-        top: 0;
+        top: 110px;
     
     }
     .sidenav {
