--- a/src/app/componets/header/header.component.css
+++ b/src/app/componets/header/header.component.css
@@ -366,13 +366,14 @@ h2 {
 @media (max-width: 400px) {
     .container {
         margin: 10px;
-        position: relative;
-        top: 0;
-        width: 95% ;
+        position: fixed;
+        top: -10px;
+        z-index: 10001;
+        width: 95%;
         display: flex;
         height: 110px;
+        background: hsl(204deg 100% 3%);
         left: 0;
-
     
     }
     .titulo {
