--- a/src/app/componets/header/header.component.css
+++ b/src/app/componets/header/header.component.css
@@ -1,19 +1,18 @@
 .container {
-    background: hsl(204deg 100% 3% / 80%);
+    background: hsl(204deg 100% 3%);
     margin: 10px;
     transition: all .5s ease;
-    position: relative;
-    z-index: 1;
-    top: 0;
-    margin-left: 23rem;
-    width: calc(100% - 25rem);
+    position: fixed;
+    z-index: 1001;
+    top: -10px;
+    margin-left: 22.5rem;
+    width: calc(100% - 24rem);
     display: flex;
     height: 110px;
     border-radius: 15px;
     align-items: center;
     justify-content: center;
     box-shadow: inset 0px 0px 6px 2px var(--border-shadow-interior);
-
 }
 
 .header {
@@ -366,25 +365,26 @@ h2 {
 @media (max-width: 400px) {
     .container {
         margin: 10px;
-        position: fixed;
         top: -10px;
         z-index: 10001;
-        width: 95%;
+        width: 100%;
         display: flex;
         height: 110px;
         background: hsl(204deg 100% 3%);
-        left: 0;
-    
+        left: -10px;
+
     }
+
     .titulo {
         display: flex;
         gap: 175px;
         left: -10px;
         top: -10px;
-      position: relative;
+        position: relative;
     }
+
     .pointerstar {
-        
+
         display: none;
     }
-  }
+}
