--- a/src/app/componets/about/about.component.css
+++ b/src/app/componets/about/about.component.css
@@ -343,6 +343,10 @@ input:checked+label .description {
 
 }
 
+/* Teléfonos en orientación vertical y horizontal */
+@media (max-width: 400px) {
+    
+}
 .footer {
     width: 100%;
     height: 30px;
