--- a/src/app/componets/body/body.component.html
+++ b/src/app/componets/body/body.component.html
@@ -11,6 +11,56 @@
             </li>
         </ul>
     </div>
+
+    <nav class="nav container">
+        <a href="" class="nav_logo">Lespodev</a>
+        <div class="nav_menu" id="nav-menu">
+            <ul class="nav_list grid">
+                <li class="nav_item">
+                    <a href="#inicio" class="nav_link active-link">
+                        <i class="ri-home-4-line nav_icon"></i>Inicio
+                    </a>
+                </li>
+                <li class="nav_item">
+                    <a href="#sobremi" class="nav_link ">
+                        <i class="ri-user-line nav_icon"></i>Sobre mi
+                    </a>
+                </li>
+                <li class="nav_item">
+                    <a href="#experiencia" class="nav_link">
+                        <i class="ri-line-chart-line nav_icon"></i>Experiencia
+                    </a>
+                </li>
+                <li class="nav_item">
+                    <a href="#habilidades" class="nav_link">
+                        <i class="ri-file-list-3-line nav_icon"></i>Habilidades
+
+                    </a>
+                </li>
+                <li class="nav_item">
+                    <a href="#portafolio" class="nav_link">
+                        <i class="ri-briefcase-2-line nav_icon"></i>Portafolio
+                    </a>
+                </li>
+                <li class="nav_item">
+                    <a href="#contacto" class="nav_link">
+                        <i class="ri-send-plane-fill nav_icon"></i>Contacto
+                    </a>
+                </li>
+            </ul>
+            <i class="ri-close-line nav_close" id="nav-close"></i>
+        </div>
+
+        <div class="nav_btns">
+            <!-- ////////////////////thema negro///////////// -->
+            <i class="uil uil-moon change-theme" id="theme-button"></i>
+            <div class="nav_toggle" id="nav-toggle">
+                <i class="ri-apps-line "></i>
+
+            </div>
+        </div>
+
+    </nav>
     <router-outlet></router-outlet>
     
 </div>
