--- a/src/app/componets/body/body.component.css
+++ b/src/app/componets/body/body.component.css
@@ -14,7 +14,7 @@
 
 }
 
-.sidenav {
+/* .sidenav {
     background: var(--backgraund-componets);
     transition: all .5s ease;
     width: 100%;
@@ -56,7 +56,7 @@
 
 .sidenav_nav .sidenav_link_text {
     opacity: 1;
-    font-size: 14px;
+    font-size: 18px;
     font-weight: 500;
 
 }
@@ -77,58 +77,64 @@
     font-size: 16px;
     font-weight: 800;
 
-}
+} */
 
 
 /* ////////////////////////////////////layaout////////////////////////////////// */
 
 .container {
     width: 100%;
-    margin-left: var(--mb-1-5);
-    margin-right: var(--mb-1-5);
-}
-
-.grid {
-    display: grid;
-    gap: 1.5rem;
-}
-
-.header {
-    width: 100%;
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    z-index: var(--z-fixed);
-    background-color: var(--body-color);
-
-}
-
-.nav {
-    width: 100%;
-    height: var(--header-height);
+    padding: 2rem 3rem 2rem 3rem;
     display: flex;
+    text-decoration: none;
     justify-content: space-between;
     align-items: center;
+    color: #fff;
 }
+
+/* .grid {
+    display: grid;
+    gap: 1.5rem;
+} */
+.grid {
+    list-style: none;
+    display: flex;
+    gap: 20px;
+    padding: 10px;
+    align-items: center;
+    cursor: pointer;
+}
+
+
+
 
 .nav_logo,
 .nav_toggle {
-    color: var(--title-color);
-    font-weight: var(--font-medium);
+    color: #fff;
+    font-weight: 700;
+    text-decoration: none !important;
+    font-size: 18px;
+
 }
 
 .nav_logo:hover {
-    color: var(--first-color);
+    color: #f66f00;
 }
 
+.nav_icon,
+.nav_close,
 .nav_toggle {
+    display: none !important;
+}
+
+/* .nav_toggle {
     font-size: 1.1rem;
     cursor: pointer;
 }
 
 .nav_toggle:hover {
     color: var(--first-color);
-}
+} */
 
 /* @media screen and (max-width: 767px) {
     .nav_menu {
@@ -145,30 +151,52 @@
 
 } */
 
-
+/* 
 .nav_list {
-    grid-template-columns: repeat(3, 1fr);
     gap: 2rem;
-}
+
+} */
 
 .nav_link {
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    font-size: var(--small-font-size);
-    color: var(--title-color);
-    font-weight: var(--font-medium);
+    width: 100%;
+    height: 100%;
+    text-decoration: none;
+    overflow: hidden;
+    justify-content: center;
+    padding: 10px;
+    border-radius: 10px;
+    color: #fff;
+    font-size: 16px;
+    font-weight: 800;
+
 }
 
 .nav_link:hover {
-    color: var(--first-color);
+    color: var(--color-naranga-neon);
+    box-shadow: inset 0px 0px 5px 2px var(--color-naranga-neon);
+
 }
 
-.nav_icon {
+
+.active {
+    transition: all 3s ease;
+    box-shadow: none !important;
+
+}
+
+
+.active .sidenav_link_text {
+    color: var(--color-naranga-neon);
+    font-size: 18px;
+    font-weight: 800;
+}
+
+/* .nav_icon {
     font-size: 1.2rem;
-}
+} */
 
-.nav_close {
+/* .nav_close {
     position: absolute;
     right: 1.3rem;
     bottom: .5rem;
@@ -179,7 +207,7 @@
 
 .nav_close:hover {
     color: var(--first-color);
-}
+} */
 
 .show-menu {
     bottom: 0;
@@ -187,9 +215,28 @@
 
 /* /////active link js ///////// */
 
-.active-link {
+/* .active-link {
+    color: var(--color-naranga-neon);
+} */
+
+/* //////////// Dark Tema ///////////////////// */
+
+.nav_btns {
+    display: flex;
+    align-items: center;
+}
+
+.change-theme {
+    font-size: 1.25rem;
+    color: var(--title-color);
+    margin-right: var(--mb-1);
+    cursor: pointer;
+}
+
+.change-theme:hover {
     color: var(--first-color);
 }
+
 
 /* Teléfonos en orientación vertical y horizontal */
 @media (max-width: 400px) {
