--- a/src/app/componets/body/body.component.html
+++ b/src/app/componets/body/body.component.html
@@ -1,52 +1,19 @@
 <div class="body">
-    <div class="sidenav" >
-   
-        <ul class="sidenav_nav">
-            <li class="sidenav_nav_item" *ngFor="let data of navData">
-                <a href="#" class="sidenav_nav_link" [routerLink]="[data.routerLink]" routerLinkActive="active"
-                    [routerLinkActiveOptions]="{exact: true}">
-    
-                    <span class="sidenav_link_text">{{data.label}}</span>
-                </a>
-            </li>
-        </ul>
-    </div>
+  
 
     <nav class="nav container">
         <a href="" class="nav_logo">Lespodev</a>
         <div class="nav_menu" id="nav-menu">
             <ul class="nav_list grid">
-                <li class="nav_item">
-                    <a href="#inicio" class="nav_link active-link">
-                        <i class="ri-home-4-line nav_icon"></i>Inicio
-                    </a>
-                </li>
-                <li class="nav_item">
-                    <a href="#sobremi" class="nav_link ">
-                        <i class="ri-user-line nav_icon"></i>Sobre mi
-                    </a>
-                </li>
-                <li class="nav_item">
-                    <a href="#experiencia" class="nav_link">
-                        <i class="ri-line-chart-line nav_icon"></i>Experiencia
-                    </a>
-                </li>
-                <li class="nav_item">
-                    <a href="#habilidades" class="nav_link">
-                        <i class="ri-file-list-3-line nav_icon"></i>Habilidades
+                <li class="nav_item" *ngFor="let data of navData">
+                    <a href="#" class="nav_link active-link" [routerLink]="[data.routerLink]" routerLinkActive="active"
+                        [routerLinkActiveOptions]="{exact: true}">
+                        <span class="sidenav_link_text">{{data.label}}</span>
 
+                        <!-- <i class="ri-home-4-line nav_icon"></i> -->
                     </a>
                 </li>
-                <li class="nav_item">
-                    <a href="#portafolio" class="nav_link">
-                        <i class="ri-briefcase-2-line nav_icon"></i>Portafolio
-                    </a>
-                </li>
-                <li class="nav_item">
-                    <a href="#contacto" class="nav_link">
-                        <i class="ri-send-plane-fill nav_icon"></i>Contacto
-                    </a>
-                </li>
+               
             </ul>
             <i class="ri-close-line nav_close" id="nav-close"></i>
         </div>
@@ -62,5 +29,5 @@
 
     </nav>
     <router-outlet></router-outlet>
-    
+
 </div>
