--- a/src/app/componets/body/body.component.css
+++ b/src/app/componets/body/body.component.css
@@ -92,10 +92,7 @@
     color: #fff;
 }
 
-/* .grid {
-    display: grid;
-    gap: 1.5rem;
-} */
+
 .grid {
     list-style: none;
     display: flex;
@@ -127,35 +124,7 @@
     display: none !important;
 }
 
-/* .nav_toggle {
-    font-size: 1.1rem;
-    cursor: pointer;
-}
 
-.nav_toggle:hover {
-    color: var(--first-color);
-} */
-
-/* @media screen and (max-width: 767px) {
-    .nav_menu {
-        position: fixed;
-        bottom: -100%;
-        left: 0;
-        width: 100%;
-        background-color: var(--body-color);
-        padding: 2rem 1.5rem 4rem;
-        box-shadow: 0 -1px 4px rgba(0, 0, 0, .15);
-        border-radius: 1.5rem 1.5rem 0 0;
-        transition: .3s;
-    }
-
-} */
-
-/* 
-.nav_list {
-    gap: 2rem;
-
-} */
 
 .nav_link {
     display: flex;
@@ -192,26 +161,8 @@
     font-weight: 800;
 }
 
-/* .nav_icon {
-    font-size: 1.2rem;
-} */
 
-/* .nav_close {
-    position: absolute;
-    right: 1.3rem;
-    bottom: .5rem;
-    font-size: 1.5rem;
-    cursor: pointer;
-    color: var(--first-color);
-}
 
-.nav_close:hover {
-    color: var(--first-color);
-} */
-
-.show-menu {
-    bottom: 0;
-}
 
 /* /////active link js ///////// */
 
@@ -229,7 +180,7 @@
 .change-theme {
     font-size: 1.25rem;
     color: var(--title-color);
-    margin-right: var(--mb-1);
+    margin-right: 1rem;
     cursor: pointer;
 }
 
@@ -251,10 +202,100 @@
 
     }
 
-    .sidenav {
+    .nav {
+        width: 100%;
+        height: 50px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 2rem 2rem 2rem 2rem;
+    }
 
-        display: none;
+    .header {
+        width: 100%;
+        position: fixed;
+        bottom: 0;
+        left: 0;
+        z-index: 100;
+        background: hsl(204deg 100% 3%);
+        border-top-left-radius: 20px;
+        border-top-right-radius: 20px;
+        box-shadow: 0px 2px 11px 1px var(--border-shadow-interior);
 
     }
 
+    .grid {
+        display: grid;
+        gap: 1.5rem;
+    }
+
+    .nav_menu {
+        position: fixed;
+        bottom: -100%;
+        left: 0;
+        width: 100%;
+        background: hsl(204deg 100% 3%);
+        padding: 2rem;
+        box-shadow: inset 0px 0px 6px 2px var(--border-shadow-interior);
+        border-radius: 1.5rem 1.5rem 0 0;
+        transition: .3s;
+    }
+
+    .show-menu {
+        bottom: 0;
+    }
+
+    .nav_icon {
+        font-size: 2.5rem;
+    }
+
+    .nav_close {
+        position: absolute;
+        right: 24px;
+        bottom: 12px;
+        font-size: 39px;
+        cursor: pointer;
+        color: hsl(0deg 0% 100%);
+    }
+
+    .nav_close:hover {
+        color: var(--color-naranga-neon);
+    }
+
+    .nav_icon,
+    .nav_close,
+    .nav_toggle {
+        display: block !important;
+    }
+
+    .nav_list {
+        grid-template-columns: repeat(3, 1fr);
+        gap: 2rem;
+    }
+
+
+    .nav_toggle {
+        font-size: 1.5rem;
+        cursor: pointer;
+    }
+
+
+    .nav_toggle:hover {
+        color: var(--color-naranga-neon);
+    }
+
+    .nav_link {
+        display: flex;
+        justify-content: center;
+        font-weight: 700;
+        flex-direction: column-reverse;
+        align-items: center;
+        padding: 0px;
+    }
+
+    .active .nav_icon {
+        color: var(--color-naranga-neon);
+
+
+    }
 }
