--- a/src/app/componets/proyect/proyect.component.html
+++ b/src/app/componets/proyect/proyect.component.html
@@ -4,7 +4,7 @@
    <section class="section">
       <div class="title">
          <div class="text-animate2">
-            <h2>Mis Proyectos</h2>
+            <h2>Proyectos</h2>
          </div>
          <div class="line"></div>
       </div>
