--- a/src/app/componets/body/body.component.css
+++ b/src/app/componets/body/body.component.css
@@ -216,7 +216,7 @@
         position: fixed;
         bottom: 0;
         left: 0;
-        z-index: 100;
+        z-index: 1060;
         background: hsl(204deg 100% 3%);
         border-top-left-radius: 20px;
         border-top-right-radius: 20px;
@@ -235,10 +235,11 @@
         left: 0;
         width: 100%;
         background: hsl(204deg 100% 3%);
-        padding: 2rem;
+        padding: 2rem 1rem;
         box-shadow: inset 0px 0px 6px 2px var(--border-shadow-interior);
         border-radius: 1.5rem 1.5rem 0 0;
         transition: .3s;
+        z-index: 10001;
     }
 
     .show-menu {
@@ -247,6 +248,7 @@
 
     .nav_icon {
         font-size: 2.5rem;
+        margin-bottom: 15px;
     }
 
     .nav_close {
