--- a/src/app/componets/resume/resume.component.css
+++ b/src/app/componets/resume/resume.component.css
@@ -200,7 +200,7 @@
 }
 
 .conte {
-    width: 50%;
+    width: 100%;
 }
 
 
@@ -209,11 +209,6 @@
     transform: scale(1.02);
 }
 
-@media(max-width:768px) {
-    .container {
-        padding: 20px;
-    }
-}
 
 
 
@@ -1101,4 +1096,40 @@ img {
     text-align: center;
     color: #ccc;
 
+}
+
+
+
+/* Teléfonos en orientación vertical y horizontal */
+@media (max-width: 400px) {
+   
+
+   
+
+    .container {
+        display: flex;
+        margin-top: 50px;
+        margin-bottom: 50px;
+        gap: 20px;
+        justify-content: center;
+        flex-direction: column;
+        align-items: center;
+        align-content: center;
+        padding: 0px;
+
+    }
+    .box_contain {
+        display: grid;
+        grid-template-rows: repeat(8, 1fr);
+        grid-template-columns: repeat(1, 1fr);
+        align-items: center;
+        justify-content: center;
+        align-content: center;
+    }
+    .container3 {
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        grid-template-rows: repeat(3, 1fr);
+        
+    }
 }
