--- a/src/app/componets/about/about.component.html
+++ b/src/app/componets/about/about.component.html
@@ -64,29 +64,46 @@
 
                         <div class="description c1">
                             <h3>Montañismo</h3>
-
+                            <p>-La Laguna Negra <br>
+                               -La Quebrada de la vieja<br>
+                               -Monserrate<br>
+                               -Parque Entre Nubes<br>
+                               -Rosales Altos<br>
+                            </p>
                         </div>
                     </div>
                 </label>
                 <input type="radio" name="slide" id="c2">
                 <label for="c2" class="card">
                     <div class="row">
-                        <div class="icon"> <img src="../../assets/img/iconspace.png"  loading="lazy" alt=""></div>
+                        <div class="icon"> <img src="../../assets/img/iconspace.png" loading="lazy" alt=""></div>
 
                         <div class="description c2">
                             <h3>Espacio</h3>
+                            <p>-La Laguna Negra <br>
+                                -La Quebrada de la vieja<br>
+                                -Monserrate<br>
+                                -Parque Entre Nubes<br>
+                                -Rosales Altos<br>
+                             </p>
+                         </div>
                         </div>
-                    </div>
                 </label>
                 <input type="radio" name="slide" id="c3">
                 <label for="c3" class="card">
                     <div class="row">
-                        <div class="icon"> <img src="../../assets/img/iconmusic.jpeg"  loading="lazy" alt=""></div>
+                        <div class="icon"> <img src="../../assets/img/iconmusic.jpeg" loading="lazy" alt=""></div>
 
                         <div class="description c3">
                             <h3>Musica</h3>
+                            <p>-La Laguna Negra <br>
+                                -La Quebrada de la vieja<br>
+                                -Monserrate<br>
+                                -Parque Entre Nubes<br>
+                                -Rosales Altos<br>
+                             </p>
+                         </div>
                         </div>
-                    </div>
                 </label>
                 <input type="radio" name="slide" id="c4">
                 <label for="c4" class="card">
@@ -95,6 +112,12 @@
 
                         <div class="description c4">
                             <h3>Tecnologia</h3>
+                            <p>-La Laguna Negra <br>
+                                -La Quebrada de la vieja<br>
+                                -Monserrate<br>
+                                -Parque Entre Nubes<br>
+                                -Rosales Altos<br>
+                             </p>
                         </div>
                     </div>
                 </label>
@@ -103,7 +126,7 @@
 
 
     </section>
-   
+
     <div class="footer">
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. </p>
     </div>
