--- a/src/app/componets/header/header.component.css
+++ b/src/app/componets/header/header.component.css
@@ -1,5 +1,5 @@
 .container {
-    background: hsl(204deg 100% 3%);
+    background: var(--color-background-header-sidenav);
     margin: 10px;
     transition: all .5s ease;
     position: fixed;
@@ -47,7 +47,7 @@ h2 {
 }
 
 .border {
-    color: #000;
+    color: var(--color-black-text);
     text-shadow:
         -1px -1px 0 var(--color-azul-neon),
         1px -1px 0 var(--color-azul-neon),
@@ -94,7 +94,7 @@ h2 {
 
 
 .border2 {
-    color: #000;
+    color: var(--color-black-text);
     text-shadow:
         -1px -1px 0 var(--color-naranga-neon),
         1px -1px 0 var(--color-naranga-neon),
@@ -180,13 +180,13 @@ h2 {
 
 /* linkdin*/
 .containerOne {
-    color: #00b6ff;
+    color: var( --color-azul-neon);
 
 }
 
 /* linkdin*/
 .containerOne:hover {
-    background-color: #000cfa3e;
+    background-color:  var(--color-azul-neon);
     color: #0026ff;
     transform: scale(1.3);
     box-shadow: none;
@@ -195,15 +195,15 @@ h2 {
 
 /* github*/
 .containerTwo {
-    color: #fff;
+    color: var(--color-white-text);
 
 }
 
 /* github*/
 .containerTwo:hover {
-    background-color: #fff;
+    background-color: var(--color-white-text);
     transform: scale(1.3);
-    color: #000;
+    color:  var(--color-black-text);
     box-shadow: none;
 
 }
@@ -249,7 +249,7 @@ h2 {
 
 .moon {
     display: flex;
-    background: #000;
+    background:  var(--color-black-text);
     border: 1px solid #737270;
     width: 30px;
     justify-content: center;
@@ -262,8 +262,8 @@ h2 {
 
 .moon:hover {
     transform: scale(1.2);
-    background: #fff;
-    color: #000;
+    background: var(--color-white-tex);
+    color:  var(--color-black-text);
 
 }
 
@@ -278,7 +278,7 @@ h2 {
 
 .change-theme:hover {
     cursor: pointer;
-    color: #000;
+    color:  var(--color-black-text);
 
 }
 
@@ -313,7 +313,7 @@ h2 {
 
 .music {
     display: flex;
-    background: #000;
+    background:  var(--color-black-text);
     border: 1px solid #737270;
     width: 30px;
     height: 25px;
@@ -331,7 +331,7 @@ h2 {
 
 .star {
     display: flex;
-    background: #000;
+    background:  var(--color-black-text);
     border: 1px solid #737270;
     width: 30px;
     height: 25px;
@@ -350,7 +350,7 @@ h2 {
 
 .puntos {
     display: flex;
-    background: #000;
+    background:  var(--color-black-text);
     border: 1px solid #737270;
     width: 80px;
     height: 25px;
