--- a/src/app/componets/perfil/perfil.component.css
+++ b/src/app/componets/perfil/perfil.component.css
@@ -4,7 +4,8 @@
 }
 
 .container {
-    background: hsl(204deg 100% 3% / 80%);
+    background: var(--color-background-container);
+    backdrop-filter: blur(1px);
     margin: 10px;
     position: fixed;
     z-index: 1;
@@ -17,7 +18,6 @@
     flex-direction: column;
     align-items: center;
     box-shadow: inset 0px 0px 6px 2px var(--border-shadow-interior);
-
 
 }
 
@@ -217,6 +217,6 @@ h1 {
     .buttons {
         padding: 18px;
         margin: 25px 0 15px 0;
-        
+
     }
 }
