--- a/src/app/componets/sidenav/sidenav.component.css
+++ b/src/app/componets/sidenav/sidenav.component.css
@@ -1,91 +1,13 @@
-.body {
+
+.header{
+    margin-top: 100px;
     width: calc(100% - 25rem);
-    min-height: 96vh;
     margin-left: 23rem;
     margin-bottom: 1rem;
-    z-index: 1000;
-    position: relative;
-    top: 0;
-    backdrop-filter: blur(1px);
-    overflow: hidden;
-    transition: all .5s ease;
-    background: var(--color-background-container);
-    border-radius: 15px;
-    box-shadow: inset 0px 0px 6px 2px var(--border-shadow-interior);
-
 }
-
-/* .sidenav {
-    background: var(--backgraund-componets);
-    transition: all .5s ease;
-    width: 100%;
-    height: auto;
-    display: flex;
-    border-radius: 15px;
-    box-shadow: inset 0px 0px 6px 2px var(--border-shadow-interior);
-    align-items: center;
-    justify-content: center;
-}
-
-.sidenav_nav {
-    list-style: none;
-    display: flex;
-    gap: 10px;
-    padding: 10px;
-    align-items: center;
-    cursor: pointer;
-
-}
-
-.sidenav .sidenav_nav .sidenav_nav_item {
-    position: relative;
-
-}
-
-.sidenav_nav .sidenav_nav_link {
-    display: flex;
-    width: 100%;
-    height: 100%;
-    text-decoration: none;
-    overflow: hidden;
-    justify-content: center;
-    padding: 10px;
-    border-radius: 10px;
-    color: #fff;
-
-}
-
-.sidenav_nav .sidenav_link_text {
-    opacity: 1;
-    font-size: 18px;
-    font-weight: 500;
-
-}
-
-.sidenav_nav .sidenav_nav_item .sidenav_nav_link:hover {
-    box-shadow: inset 0px 0px 5px 2px var(--color-naranga-neon);
-
-}
-
-.active {
-    transition: all 3s ease;
-    box-shadow: none !important;
-}
-
-
-.active .sidenav_link_text {
-    color: var(--color-naranga-neon);
-    font-size: 16px;
-    font-weight: 800;
-
-} */
-
-
-/* ////////////////////////////////////layaout////////////////////////////////// */
-
 .container {
     width: 100%;
-    padding: 2rem 3rem 2rem 3rem;
+    padding: 2rem 3rem 0rem 3rem;
     display: flex;
     text-decoration: none;
     justify-content: space-between;
@@ -100,7 +22,6 @@
     gap: 20px;
     padding: 10px;
     align-items: center;
-    cursor: pointer;
 }
 
 
@@ -200,6 +121,7 @@
         z-index: 100;
         position: relative;
         top: 110px;
+        backdrop-filter: none;
 
     }
 
@@ -213,16 +135,19 @@
     }
 
     .header {
-        width: 100%;
-        position: fixed;
-        bottom: 0;
-        left: 0;
-        z-index: 1060;
-        background: hsl(204deg 100% 3%);
-        border-top-left-radius: 20px;
-        border-top-right-radius: 20px;
-        box-shadow: 0px 2px 11px 1px var(--border-shadow-interior);
-
+       
+            width: 100%;
+            position: fixed;
+            bottom: 0;
+            left: 0;
+            z-index: 1060;
+            background: hsl(204deg 100% 3%);
+            border-top-left-radius: 20px;
+            border-top-right-radius: 20px;
+            box-shadow: 0px 2px 11px 1px var(--border-shadow-interior);
+            margin-top: 0;
+            margin-left: 0;
+            margin-bottom: 0;
     }
 
     .grid {
