--- a/src/styles.css
+++ b/src/styles.css
@@ -32,13 +32,35 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(0, 0, 0, 0.86);
+    background: rgb(0 0 0 / 80%);
     z-index: -1;
 }
 
 
 
 :root {
+    /* ///header//// */
+    --color-background-container: hsl(204deg 100% 3%/ 70%);
+    --color-background-header-sidenav: hsl(204deg 100% 3%);
+    --color-azul-neon: hsl(186, 100%, 50%);
+    --border-shadow-interior: hsl(204deg 100% 18%);
+    --color-white-text: #fff; 
+    --color-black-text: #000;
+    
+    --color-background-hover-azul-neon: #000cfa3e; /* para .containerOne:hover */
+    --color-azul-hover: #0026ff; /* para .containerOne:hover */
+    --color-white: #fff; /* para .containerTwo */
+    --color-pink: #ea07ff; /* para .containerThree */
+    --color-background-hover-pink: #a81bb56a; /* para .containerThree:hover */
+    --color-pink-hover: #a407ff; /* para .containerThree:hover */
+    --color-gray: #737270;
+    --color-bxs-star: #daaa3f;
+    --color-bx: #ccc;
+    --color-background-nav-btns: #002639;
+    --color-border-shadow-interior: hsl(185, 100%, 18%); /* asumido de un ejemplo */
+    --color-border-shadow-interior-img: hsl(185, 100%, 18%); /* asumido de un ejemplo */
+    --color-background-interior-img: hsl(0, 100%, 0%); /* asumido de un ejemplo */
+    --color-text-shadow: #737270; /* sombra en .moon, .star, .puntos */
 
     --backgraund-body: hsl(0, 100%, 0%);
     --backgraund-componets: hsl(204, 100%, 3%);
