lsito se esta modficando los stilos para el tema oscura y demas empezmos con el header y ya evamos para el perfil

--- a/src/app/componets/body/body.component.css
+++ b/src/app/componets/body/body.component.css
@@ -7,7 +7,7 @@
     position: relative;
     top: 0;
     backdrop-filter: blur(1px);
-    overflow: hidden;
+    border: 1px solid var(--border-interior);
     transition: all .5s ease;
     background: var(--color-background-container);
     border-radius: 15px;
