--- a/src/app/componets/header/header.component.css
+++ b/src/app/componets/header/header.component.css
@@ -1,8 +1,12 @@
 .container {
-    background: var(--color-background-header-sidenav);
-    margin: 10px;
+    background: var(--color-background-container); 
+    backdrop-filter: blur(1px);
+    border: 1px solid #ffffff6e;
+    border: 1px solid var(--border-interior);
+
+    margin-top: 20px;
     transition: all .5s ease;
-    position: fixed;
+    position: relative;
     z-index: 1001;
     top: -10px;
     margin-left: 22.5rem;
@@ -180,13 +184,13 @@ h2 {
 
 /* linkdin*/
 .containerOne {
-    color: var( --color-azul-neon);
+    color: var(--color-azul-neon);
 
 }
 
 /* linkdin*/
 .containerOne:hover {
-    background-color:  var(--color-azul-neon);
+    background-color: var(--color-azul-neon);
     color: #0026ff;
     transform: scale(1.3);
     box-shadow: none;
@@ -203,21 +207,7 @@ h2 {
 .containerTwo:hover {
     background-color: var(--color-white-text);
     transform: scale(1.3);
-    color:  var(--color-black-text);
-    box-shadow: none;
-
-}
-
-/* instagram*/
-.containerThree {
-    color: #ea07ff;
-}
-
-/* instagram*/
-.containerThree:hover {
-    background-color: #a81bb56a;
-    transform: scale(1.3);
-    color: #a407ff;
+    color: var(--color-black-text);
     box-shadow: none;
 
 }
@@ -247,43 +237,11 @@ h2 {
 
 }
 
-.moon {
-    display: flex;
-    background:  var(--color-black-text);
-    border: 1px solid #737270;
-    width: 30px;
-    justify-content: center;
-    border-top-left-radius: 8px;
-    border-bottom-left-radius: 8px;
-    box-shadow: 0px 0px 6px #737270;
-    height: 25px;
-
-}
-
-.moon:hover {
-    transform: scale(1.2);
-    background: var(--color-white-tex);
-    color:  var(--color-black-text);
-
-}
 
 
 
-.uil-moon {
-    margin-top: 2px;
-}
-
-
-
-
-.change-theme:hover {
+.bxs-star {
     cursor: pointer;
-    color:  var(--color-black-text);
-
-}
-
-.bx {
-    color: #ccc;
 
 }
 
@@ -296,7 +254,7 @@ h2 {
     display: flex;
     justify-content: center;
     align-items: center;
-    color: #ccc;
+    color: var(--color-grisclaro-text);
 }
 
 .nav_btns_stars span {
@@ -313,14 +271,14 @@ h2 {
 
 .music {
     display: flex;
-    background:  var(--color-black-text);
-    border: 1px solid #737270;
+    background: var(--color-black-text);
+    border: 1px solid var(--color-gray);
     width: 30px;
     height: 25px;
     justify-content: center;
     border-top-right-radius: 8px;
     border-bottom-right-radius: 8px;
-    box-shadow: 0px 0px 6px #737270;
+    box-shadow: 0px 0px 6px var(--color-gray);
     align-items: center;
 
 }
@@ -331,14 +289,14 @@ h2 {
 
 .star {
     display: flex;
-    background:  var(--color-black-text);
-    border: 1px solid #737270;
+    background: var(--color-black-text);
+    border: 1px solid var(--color-gray);
     width: 30px;
     height: 25px;
     justify-content: center;
     border-top-left-radius: 8px;
     border-bottom-left-radius: 8px;
-    box-shadow: 0px 0px 6px #737270;
+    box-shadow: 0px 0px 6px var(--color-gray);
     align-items: center;
 }
 
@@ -350,14 +308,14 @@ h2 {
 
 .puntos {
     display: flex;
-    background:  var(--color-black-text);
-    border: 1px solid #737270;
+    background: var(--color-black-text);
+    border: 1px solid var(--color-gray);
     width: 80px;
     height: 25px;
     justify-content: center;
     border-top-right-radius: 8px;
     border-bottom-right-radius: 8px;
-    box-shadow: 0px 0px 6px #737270;
+    box-shadow: 0px 0px 6px var(--color-gray);
     align-items: center;
 }
 
@@ -370,9 +328,9 @@ h2 {
         width: 100%;
         display: flex;
         height: 110px;
-        background: hsl(204deg 100% 3%);
         left: -10px;
-
+        border-top-left-radius: 0;
+        border-top-right-radius: 0;
     }
 
     .titulo {
