--- a/src/app/componets/perfil/perfil.component.css
+++ b/src/app/componets/perfil/perfil.component.css
@@ -6,6 +6,7 @@
 .container {
     background: var(--color-background-container);
     backdrop-filter: blur(1px);
+        border: 1px solid var(--border-interior);
     margin: 10px;
     position: fixed;
     z-index: 1;
