--- a/src/app/componets/sidenav/sidenav.component.css
+++ b/src/app/componets/sidenav/sidenav.component.css
@@ -1,13 +1,15 @@
 
 .header{
-    margin-top: 100px;
     width: calc(100% - 25rem);
     margin-left: 23rem;
+    display: flex;
     margin-bottom: 1rem;
+    align-items: center;
+    justify-content: center;
 }
 .container {
     width: 100%;
-    padding: 2rem 3rem 0rem 3rem;
+    padding: 0rem 3rem 0rem 3rem;
     display: flex;
     text-decoration: none;
     justify-content: space-between;
